2014-12-05  Matthew Mundell <matthew.mundell@greenbone.net>

	Backport r21045.

	* src/gsad_omp.c (get_one): Check if extra_xml was given, to prevent
	segfaults when the database contains errors.

2014-12-17  Timo Pollmeier <timo.pollmeier@greenbone.net>

	Backport r21233.

	* src/gsad_omp.c (get_many): Do not remember new filt_id if it is "0".

2014-12-05  Matthew Mundell <matthew.mundell@greenbone.net>

	Backport r21123.

	* src/gsad_omp.c (page_url): Replace the cmd param in the URL.  Also be
	more careful about what can come before the parameters.

2014-12-03  Matthew Mundell <matthew.mundell@greenbone.net>

	Backport r21093.

	* src/gsad_omp.c (new_task): Get all slaves that the user may read.

2014-12-04  Matthew Mundell <matthew.mundell@greenbone.net>

	Backport r21090.

	* CMakeLists.txt: Add new icon from last commit.

2014-12-03  Matthew Mundell <matthew.mundell@greenbone.net>

	Backport r21089.

	Enable mixing slaves and task with other users.

	* src/gsad_omp.c (edit_task): Get all slaves the user may read.

	* src/html/classic/omp.xsl (task-icons): Mark slave unavailable if user
	may not read it.
	(slave [details]): Mark task unavailable if user may not read it.

	* src/html/classic/img/details_inactive.png: New file.

2014-12-01  Matthew Mundell <matthew.mundell@greenbone.net>

	Backport r21074.

	Ensure that auto refresh goes to the current page when the previous page
	submitted a form.

	* src/gsad_base.h (credentials_t): Add current_page.

	* src/gsad_omp.c (xsl_transform_omp): Add CURRENT_PAGE to ENVELOPE.
	(page_url, page_url_append_param): New functions.
	(next_page): Setup current_page in credentials according to "next"
	param.  This overrides the default, which is to use the caller URL.
	(get_one, get_task, get_config): Append ID to page_url when extracting
	ID from OMP CREATE response.

	* src/html/classic/gsad.xsl (autorefresh [html-header-meta]): Use
	CURRENT_PAGE instead of CALLER for the refresh URL.
	(current_page): New template.
